--- a/login.html
+++ b/login.html
@@ -1,3 +1,7 @@
+/*
+    Projeto: Loja de Games integrado com jquery
+    Obs: arquivo HTML da página de login
+*/
 <!DOCTYPE html>
 <html lang="pt-br">
 
